--- a/ReportApp/Storyboards/MessageCell.xib
+++ b/ReportApp/Storyboards/MessageCell.xib
@@ -13,40 +13,58 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="MessageCell" customModule="ReportApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="374" height="131"/>
+            <rect key="frame" x="0.0" y="0.0" width="374" height="65"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="MEf-iJ-CLi">
-                    <rect key="frame" x="5" y="5" width="364" height="121"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QcH-L4-3V7" userLabel="Padding">
+                    <rect key="frame" x="10" y="5" width="100" height="55"/>
                     <subviews>
-                        <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="Nbz-pL-zT5" userLabel="message">
-                            <rect key="frame" x="0.0" y="0.0" width="300" height="121"/>
-                            <color key="backgroundColor" red="0.0" green="0.58980089430000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            <constraints>
-                                <constraint firstAttribute="width" relation="lessThanOrEqual" constant="300" id="xdr-Os-VBC"/>
-                            </constraints>
-                            <inset key="contentEdgeInsets" minX="5" minY="5" maxX="5" maxY="5"/>
-                            <state key="normal" title="buenas tardes como podemos ayudarte">
-                                <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </state>
-                        </button>
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GA2-Z2-TnJ">
+                            <rect key="frame" x="5" y="5" width="90" height="45"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="topInset">
+                                    <real key="value" value="10"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="number" keyPath="bottomInset">
+                                    <real key="value" value="10"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="number" keyPath="leftInset">
+                                    <real key="value" value="0.0"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="number" keyPath="rightInset">
+                                    <real key="value" value="0.0"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                        </label>
                     </subviews>
-                </stackView>
+                    <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstItem="GA2-Z2-TnJ" firstAttribute="leading" secondItem="QcH-L4-3V7" secondAttribute="leading" constant="5" id="4O9-M8-lGN"/>
+                        <constraint firstAttribute="trailing" secondItem="GA2-Z2-TnJ" secondAttribute="trailing" constant="5" id="7f4-5G-JEW"/>
+                        <constraint firstAttribute="width" constant="100" id="CAv-BZ-QaL"/>
+                        <constraint firstItem="GA2-Z2-TnJ" firstAttribute="top" secondItem="QcH-L4-3V7" secondAttribute="top" constant="5" id="Nv4-BH-ReA"/>
+                        <constraint firstAttribute="bottom" secondItem="GA2-Z2-TnJ" secondAttribute="bottom" constant="5" id="ZIA-xf-8Ex"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="MEf-iJ-CLi" secondAttribute="bottom" constant="5" id="HC0-zu-LPS"/>
-                <constraint firstItem="MEf-iJ-CLi" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="5" id="KyV-bL-jRt"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="MEf-iJ-CLi" secondAttribute="trailing" constant="5" id="id3-IU-2B3"/>
-                <constraint firstItem="MEf-iJ-CLi" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="5" id="n1B-FI-hvW"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="QcH-L4-3V7" secondAttribute="bottom" constant="5" id="MfD-c0-5kR"/>
+                <constraint firstItem="QcH-L4-3V7" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="10" id="hnN-Th-45G"/>
+                <constraint firstItem="QcH-L4-3V7" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="5" id="jWD-Ze-pqv"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
-                <outlet property="mMessageLabel" destination="Nbz-pL-zT5" id="bwE-Su-qZY"/>
-                <outlet property="mStackView" destination="MEf-iJ-CLi" id="nV1-y3-rah"/>
+                <outlet property="mBubbleView" destination="QcH-L4-3V7" id="G5Q-gY-5KJ"/>
+                <outlet property="mLeadingSpaceConstraint" destination="hnN-Th-45G" id="8eN-Ca-rdA"/>
+                <outlet property="mMessageLabel" destination="GA2-Z2-TnJ" id="fmV-bu-FJz"/>
+                <outlet property="mWidthConstraint" destination="CAv-BZ-QaL" id="V6v-Cu-FNT"/>
             </connections>
-            <point key="canvasLocation" x="39" y="376.5"/>
+            <point key="canvasLocation" x="39" y="343.5"/>
         </view>
     </objects>
 </document>
